--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,9 +15,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.version>1.3.71</kotlin.version>
-        <kotlin.code.style>official</kotlin.code.style>
-        <gauge.version>0.7.3</gauge.version>
-        <appium.version>7.0.0</appium.version>
+        <gauge.version>1.1.4</gauge.version> <!-- Updated Gauge version -->
+        <appium.version>6.0.0</appium.version> <!-- Updated Appium version -->
         <junit.version>4.12</junit.version>
     </properties>
 
@@ -79,23 +80,23 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source> <!-- Ensure compatibility with Java 8 -->
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>com.thoughtworks.gauge.maven</groupId>
                 <artifactId>gauge-maven-plugin</artifactId>
-                <version>1.3.0</version>
+                <version>1.1.4</version> <!-- Updated plugin version -->
                 <executions>
                     <execution>
                         <phase>test</phase>
-                        <configuration>
-                            <specsDir>specs</specsDir>
-                        </configuration>
                         <goals>
                             <goal>execute</goal>
                         </goals>
+                        <configuration>
+                            <specsDir>specs</specsDir>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
