--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+             <dependency>
+        <groupId>com.thoughtworks.gauge</groupId>
+        <artifactId>gauge-java</artifactId>
+        <version>0.11.2</version>
+    </dependency>
+    <dependency>
+        <groupId>com.thoughtworks.gauge.maven</groupId>
+        <artifactId>gauge-maven-plugin</artifactId>
+        <version>1.6.4</version>
+    </dependency>
     </dependencies>
 
     <build>
