--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,22 @@
                     </execution>
                 </executions>
             </plugin>
+                 <plugin>
+            <groupId>com.thoughtworks.gauge.maven</groupId>
+            <artifactId>gauge-maven-plugin</artifactId>
+            <version>1.6.4</version>
+            <executions>
+                <execution>
+                    <phase>test</phase>
+                    <goals>
+                        <goal>execute</goal>
+                    </goals>
+                    <configuration>
+                        <specsDir>specs</specsDir>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
         </plugins>
     </build>
 </project>
